getting everything needed from the old repo

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,15 +1,38 @@
 @import "tailwindcss";
 
+@theme inline {
+  --color-background: #ffffff;
+  --color-foreground: #171717;
+  --font-sans: "Inter", sans-serif;
+  --font-mono: ui-monospace, monospace;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  /* EduAlly Color Variables */
+  --bport-green: rgb(0, 82, 62);
+  --bport-gold: rgb(225, 199, 58);
+  --bport-secondary-green1: rgb(120, 157, 74);
+  --bport-secondary-green2: rgb(87, 121, 53);
+  --bport-secondary-gold: rgb(255, 164, 0);
+
+  --edually-red: rgb(238, 50, 60);
+
+  --bp-greenL: rgb(3, 92, 70);
+  --bp-greenD: rgb(2, 74, 56);
+
+  --gradient-greenL: linear-gradient(to bottom, var(--bp-greenL), var(--bport-green));
+  --gradient-greenD: linear-gradient(to bottom, var(--bp-greenL), var(--bp-greenD));
+
+  --panel-color: rgb(200, 200, 200);
+  --panel-gradient: linear-gradient(to bottom, rgb(225, 225, 225), rgb(200, 200, 200));
+
+  --tint-color: rgba(0, 0, 0, 0.1);
+  --shadow-color: rgba(0, 0, 0, 0.25);
+  --text-shadow-color: rgba(0, 0, 0, 0.5);
+  font-size: 15px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,8 +42,75 @@
   }
 }
 
+/* Reset margins and padding for body */
+html,
 body {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  justify-content: center;
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Inter", sans-serif;
+  overflow: hidden;
+}
+
+/* General heading styles */
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
+h1 {
+  font-size: clamp(2rem, 4vw, 2.5rem);
+  font-weight: 700;
+}
+
+h2 {
+  font-size: clamp(1.75rem, 3vw, 2rem);
+}
+
+h3 {
+  display: inline;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+i {
+  font-size: 1.5rem;
+  padding-inline: 10px 20px;
+}
+
+/* Everything but the Nav (includes Header) */
+.main-content {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: calc(100% - clamp(200px, 20vw, 350px));
+  background-color: var(--background);
+}
+
+/* Everything but the Nav and Header */
+.main-workspace {
+  width: calc(100% - 50px);
+  padding: 25px;
+  box-shadow: 0 15px 15px -15px var(--shadow-color) inset;
+  overflow-y: scroll;
+  min-height: calc(100vh - 150px);
+  max-height: calc(100vh - 160px);
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-panel {
+  background-color: var(--panel-color);
+  padding: 25px;
+  box-shadow: 0 5px 5px var(--shadow-color);
+  border-radius: 15px;
+  margin: 15px;
 }
